--- a/config/chips/v536/configs/Lindenis_SOM/linux/config-4.9
+++ b/config/chips/v536/configs/Lindenis_SOM/linux/config-4.9
@@ -759,7 +759,7 @@ CONFIG_NET_FLOW_LIMIT=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
-CONFIG_BT=y
+CONFIG_BT=m
 CONFIG_BT_BREDR=y
 # CONFIG_BT_RFCOMM is not set
 # CONFIG_BT_BNEP is not set
@@ -778,7 +778,7 @@ CONFIG_BT_DEBUGFS=y
 # CONFIG_BT_RTKBTUSB is not set
 # CONFIG_XR_BT_LPM is not set
 # CONFIG_BT_HCIBTSDIO is not set
-CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
 # CONFIG_BT_HCIUART_ATH3K is not set
@@ -803,7 +803,7 @@ CONFIG_BT_HCIUART_3WIRE=y
 # CONFIG_STREAM_PARSER is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
-CONFIG_CFG80211=y
+CONFIG_CFG80211=m
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
@@ -816,12 +816,12 @@ CONFIG_CFG80211_CRDA_SUPPORT=y
 # CONFIG_MAC80211 is not set
 CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_WIMAX is not set
-CONFIG_RFKILL=y
+CONFIG_RFKILL=m
 CONFIG_RFKILL_PM=y
 CONFIG_RFKILL_LEDS=y
 # CONFIG_RFKILL_INPUT is not set
-CONFIG_RFKILL_REGULATOR=y
-CONFIG_RFKILL_GPIO=y
+CONFIG_RFKILL_REGULATOR=m
+CONFIG_RFKILL_GPIO=m
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -1297,7 +1297,7 @@ CONFIG_USB_NET_ZAURUS=y
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
 # CONFIG_USB_NET_QMI_WWAN is not set
-CONFIG_USB_HSO=y
+CONFIG_USB_HSO=m
 # CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_IPHETH is not set
 # CONFIG_USB_SIERRA_NET is not set
